--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
+  "main": "src/electron-starter.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nf start",
+    "electron": "electron ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +25,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "electron": "^3.0.9",
+    "foreman": "^3.0.1"
+  }
 }
